# core

./: .deploy-params.json  .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  ENCRYPTION.md  README-RELEASES.md  README.md  Rocket.toml.template  build-launcher.sh  build.rs  diesel-pg.toml  diesel-sqlite.toml  diesel.toml  env.dev.gpg  faktory.sh  install.sh  log4rs.yml  rabbitmq.sh  rust-toolchain.toml
.cargo/: config.toml
bundled/: .env.template
client/: 200.html
client/_app/: version.json
client/assets/: enigmatick_wasm_bg.wasm
docker/: Dockerfile
docker/files/: start
launcher/: Cargo.toml  build.rs
launcher/src/: main.rs
migrations.pg/2024-02-29-235330_make_remote_notes_kind_enum/: up.sql
migrations.pg/2024-03-02-012441_forget_the_indexes/: down.sql  up.sql
migrations.pg/2024-03-05-030054_add_collation/: up.sql
migrations.pg/2024-03-13-180911_make_avatar_optional/: down.sql
migrations.pg/2024-03-25-044922_create_questions_table/: down.sql  up.sql
migrations.pg/2024-03-25-172112_add_target_remote_question_id_to_activities/: down.sql  up.sql
migrations.pg/2024-03-26-052532_add_attributed_to_to_remote_questions/: down.sql  up.sql
migrations.pg/2024-03-26-060006_adjust_timeline_for_questions/: down.sql  up.sql
migrations.pg/2024-09-09-161159_add_activity_indexes/: down.sql  up.sql
migrations.pg/2024-09-12-164127_correct_reply_and_add_activity_indexes/: down.sql  up.sql
migrations.pg/2024-09-13-204442_add_remote_note_metadata/: down.sql  up.sql
migrations.pg/2024-09-14-180134_make_activity_ap_id_unique/: down.sql  up.sql
migrations.pg/2024-09-16-033454_add_some_indexes/: down.sql  up.sql
migrations.pg/2024-09-19-162003_remove_timeline_tables/: down.sql  up.sql
migrations.pg/2024-09-22-032221_add_raw_to_activities/: down.sql  up.sql
migrations.pg/2024-09-22-192720_create_objects_table/: down.sql  up.sql
migrations.pg/2024-09-22-230333_add_object_id_to_activities/: down.sql  up.sql
migrations.pg/2024-09-22-234304_make_object_as_id_unique/: down.sql  up.sql
migrations.pg/2024-09-24-040731_add_object_hashtags_index/: down.sql  up.sql
migrations.pg/2024-09-24-235340_add_objects_uuid_index/: down.sql  up.sql
migrations.pg/2024-09-25-001616_add_more_objects_indexes/: down.sql  up.sql
migrations.pg/2024-09-25-011544_add_more_activities_indexes/: down.sql  up.sql
migrations.pg/2024-10-06-231148_merge_remote_actors_to_profiles/: down.sql  up.sql
migrations.pg/2024-10-17-232651_delete_some_tables/: up.sql
migrations.pg/2024-10-19-040253_create_unprocessable_table/: down.sql  up.sql
migrations.pg/2024-10-22-000733_remove_unused_fields/: down.sql  up.sql
migrations.pg/2024-10-26-191100_add_send_logs_to_activities/: down.sql  up.sql
migrations.pg/2024-10-27-050232_add_actor_tombstone/: up.sql
migrations.pg/2024-11-01-051703_index_public_key/: down.sql  up.sql
migrations.pg/2024-11-05-042432_convert_actor_url_to_jsonb/: down.sql  up.sql
migrations.pg/2024-11-09-044654_assign_actor_to_otk/: down.sql  up.sql
migrations.pg/2024-11-09-220424_add_fk_constraint_to_otk/: down.sql  up.sql
migrations.pg/2024-11-09-234034_add_keys_collection_to_actor/: down.sql  up.sql
migrations.pg/2024-11-12-174939_add_instrument_to_activity_and_object/: down.sql  up.sql
migrations.pg/2024-11-12-234612_adjust_encryption_model/: down.sql  up.sql
migrations.pg/2024-11-13-050703_unique_uuids/: down.sql  up.sql
migrations.pg/2024-11-13-221356_encrypted_note_object_type/: up.sql
migrations.pg/2024-11-18-173048_adjust_olm_session_attributes/: down.sql  up.sql
migrations.pg/2024-11-19-022855_adjust_olm_session/: down.sql  up.sql
migrations.pg/2024-11-24-024529_add_last_decrypted_field/: down.sql  up.sql
migrations.pg/2024-12-14-204020_make_olm_sessions_unique/: down.sql  up.sql
migrations.pg/2024-12-16-223821_add_error_field_to_unprocessable/: down.sql  up.sql
migrations.pg/2024-12-24-035305_add_shared_inbox_to_instances/: down.sql  up.sql
migrations.pg/2025-01-10-014235_add_mls_fields_to_actors/: down.sql  up.sql
migrations.pg/2025-01-11-025154_create_mls_key_package_table/: down.sql  up.sql
migrations.pg/2025-01-15-022523_create_mls_conversation_table/: down.sql  up.sql
migrations.pg/2025-01-21-164148_create_some_indexes/: down.sql  up.sql
migrations.pg/2025-04-29-034648_add_path_to_cache/: down.sql  up.sql
migrations.pg/2025-06-23-032738_add_muted_terms_to_actor/: down.sql  up.sql
migrations.pg/2025-06-24-214711_in_reply_to_text/: down.sql  up.sql
migrations.pg/2025-06-24-223440_create_objects_closure/: down.sql  up.sql
migrations.pg/2025-06-25-160218_revert_in_reply_to_text/: down.sql  up.sql
migrations.pg/2025-06-25-212802_actor_featured_jsonb/: down.sql  up.sql
migrations.pg/2025-06-27-215745_extract_parent_id_includes_objects/: down.sql  up.sql
migrations.pg/2025-06-28-042413_add_move_psql_enum/: up.sql
migrations.pg/2025-07-02-212039_rework_follow_relationships/: down.sql  up.sql
migrations.pg/2025-07-04-175947_allow_orphaned_objects/: down.sql  up.sql
migrations.pg/2025-11-08-171133_add_objects_parent_id_index/: down.sql  up.sql
migrations.pg/2025-11-10-000000_optimize_closure_trigger/: down.sql  up.sql
migrations.pg/2025-11-22-000000_add_ap_source/: down.sql  up.sql
migrations.pg/2025-11-24-000000_add_activities_published/: down.sql  up.sql
migrations.pg/2025-11-26-203000_add_reject_activity_type/: down.sql  up.sql
migrations.pg/2025-11-26-203100_add_rejected_to_follows/: down.sql  up.sql
migrations.postgresql/2024-02-29-235330_make_remote_notes_kind_enum/: down.sql
migrations.postgresql/2024-03-01-222214_create_hashtag_tables/: up.sql
migrations.postgresql/2024-03-03-053357_create_activities_cc_and_to/: down.sql
migrations/2022-12-19-052059_create_notes/: down.sql  (+1 more)
proxy/: Cargo.toml
proxy/src/: main.rs
src/: admin.rs  axum_server.rs  blocklist.rs  db.rs  events.rs  helper.rs  lib.rs  retriever.rs  schema-pg.rs  schema-sqlite.patch  schema-sqlite.rs  schema.rs  server.rs  signing.rs  webfinger.rs
tasks/: Cargo.toml
tasks/src/: main.rs
(+892 files in other folders)
