[package]
name = "enigmatick"
version = "0.2.7"
edition = "2021"
license = "GPL-3.0-only"
description = "Enigmatick is a social media platform that integrates with servers that implement the ActivityPub protocol (e.g., Mastodon)"
repository = "https://gitlab.com/enigmatick"
documentation = "https://docs.rs/enigmatick/latest/enigmatick/"
homepage = "https://enigmatick.social/@jdt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
log4rs = "1.3"
dotenvy = "0.15"
chrono = { version = "0.4.34", features = ["serde"] }
lazy_static = "1.4.0"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
#serde_with = "3"
rsa = "0.9"
rand = "0.8"
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.21.7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
url = "2.5"
#hex = "0.4"
httpdate = "1"
regex = "1"
async-mutex = "1.4"
crossbeam-channel = "0.5"
r2d2 = "0.8"
tokio = { version = "1.36", features = ["rt"] }
orion = "0.17"
urlencoding = "2.1"
ammonia = "3.3"
maplit = "1.0"
futures-lite = "^2.2"
#async_once = "0.2"
webpage = { version = "2.0", features = ["serde"] }

rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2", features = ["postgres", "sqlite", "chrono", "r2d2", "serde_json", "64-column-tables", "returning_clauses_for_sqlite_3_35"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
image = "0.24.9"
rexiv2 = "0.10.0"
enum_dispatch = "0.3.12"
clap = { version = "4.5.1", features = ["derive"] }
diesel_migrations = { version = "2.2.0", features = ["postgres", "sqlite"] }
rust-embed = { version = "8.3.0", features = ["rocket", "interpolate-folder-path", "compression", "tokio"] }
cfg-if = "1.0.0"
convert_case = "0.6.0"
#jdt_activity_pub = { path = "../../libs/activity_pub/" }
jdt_activity_pub = "0.2.24"
indoc = "2.0.5"

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
default-features = false
features = ["diesel_postgres_pool", "diesel_sqlite_pool"]

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "enigmatick"

[features]
default = ["pg"]
pg =  []
sqlite = []
