[package]
name = "enigmatick"
version = "0.5.4"
edition = "2021"
license = "GPL-3.0-only"
description = "Enigmatick is a social media platform that integrates with servers that implement the ActivityPub protocol (e.g., Mastodon)"
repository = "https://gitlab.com/enigmatick"
documentation = "https://docs.rs/enigmatick/latest/enigmatick/"
homepage = "https://enigmatick.social/@jdt"

[workspace]
members = [
    ".",
    "proxy",
    "tasks"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
log4rs = "1.3"
dotenvy = "0.15"
chrono = { version = "0.4.34", features = ["serde"] }
lazy_static = "1.4.0"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rsa = "0.9"
rand = "0.8"
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.21.7"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls", "stream", "charset"] }
url = "2.5"
httpdate = "1"
regex = "1"
async-mutex = "1.4"
crossbeam-channel = "0.5"
tokio = { version = "1.36", features = ["full"] }
orion = "0.17"
urlencoding = "2.1"
ammonia = "3.3"
maplit = "1.0"
futures-lite = "^2.2"
scraper = "0.22"
crossterm = "0.27"
diesel = { version = "2.2", features = ["chrono", "serde_json", "64-column-tables"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
image = "0.24.9"
img-parts = "0.4.0"
enum_dispatch = "0.3.12"
clap = { version = "4.5.1", features = ["derive"] }
diesel_migrations = { version = "2.2.0" }
rust-embed = { version = "8.3.0", features = ["interpolate-folder-path", "compression", "tokio"] }
cfg-if = "1.0.0"
atty = "0.2"
convert_case = "0.6.0"
#jdt_activity_pub = { path = "../../libs/activity_pub/" }
jdt_activity_pub = "0.2.82"
#indoc = "2.0.5"
indicatif = "0.17"
comfy-table = "7.1.0"
ctrlc = "3.4"
infer = "0.19.0"
axum = { version = "0.8.4", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }
identicon-rs = "7.0.0"
once_cell = "1.21.3"
mime_guess = "2.0.5"
axum-extra = { version = "0.10.1", features = ["query"] }
pq-sys = { version = "0.6", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
tantivy = "0.25"
tempfile = "3.23"
tikv-jemallocator = { version = "0.6", features = ["profiling", "stats"], optional = true }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }

# Add deadpool-diesel for async database connection pooling
[dependencies.deadpool-diesel]
version = "0.6.1"
features = ["postgres", "rt_tokio_1"]

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "enigmatick"
path = "src/bin/enigmatick/mod.rs"

[features]
default = ["pg"]
pg = ["diesel/postgres", "diesel_migrations/postgres"]
sqlite = ["diesel/sqlite", "diesel/returning_clauses_for_sqlite_3_35", "diesel_migrations/sqlite"]
bundled-postgres = ["pg", "pq-sys/bundled", "openssl"]
memory-profiling = ["tikv-jemallocator", "tikv-jemalloc-ctl"]
