[package]
name = "launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[workspace]

[[bin]]
name = "enigmatick"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
dotenvy = "0.15"
ctrlc = "3.0"
