[package]
name = "enigmatick"
version = "0.5.9"
edition = "2021"
license = "GPL-3.0-only"
description = "Enigmatick is a federated communication platform that integrates with servers that implement the ActivityPub protocol (e.g., Mastodon)"
repository = "https://gitlab.com/enigmatick"
documentation = "https://docs.rs/enigmatick/latest/enigmatick/"
homepage = "https://enigmatick.social/@jdt"
build = "build.rs"

[workspace]

[[bin]]
name = "enigmatick"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
dotenvy = "0.15"
ctrlc = "3.0"

[features]
memory-profiling = []
