[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
serde_json = "1.0"

axum-reverse-proxy = "1.0.3"
axum = "0.8.4"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls-acme = { version = "0.14.0", features = ["axum"] }

lazy_static = "1.5.0"
tower = { version = "0.4", features = ["util", "timeout"] }
#openssl = { version = "0.10", optional = true }

# [features]
# vendored-openssl = ["openssl/vendored"]
