[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
serde_json = "1.0"
lazy_static = "1.5.0"
enigmatick = { path = "../", features = ["ffmpeg"] }
