[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "fs"] }
async-trait = "0.1"
env_logger = "0.10"
dotenvy = "0.15"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
diesel = { version = "2.0", features = ["postgres", "chrono"] }
enigmatick = { path = ".." }

# For musl static builds
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
